--- a/persistence/jpa/adoc/modules/ROOT/pages/weaving.adoc
+++ b/persistence/jpa/adoc/modules/ROOT/pages/weaving.adoc
@@ -6,12 +6,13 @@
 A responsibility of all ORMs is lazy loading of related objects (so as not to load all the data in one go), and tracking of objects as they are modified (to flush back to the database).
 
 With JPA, this is typically done dynamically at runtime, using a Java agent.
-The xref:docs:starters:simpleapp.adoc[SimpleApp] and xref:docs:starters:helloworld.adoc[HelloWorld] starter apps demonstrate this, bundling the `spring-instrument-5.3.5.jar` file.
+The xref:docs:starters:simpleapp.adoc[SimpleApp] and xref:docs:starters:helloworld.adoc[HelloWorld] starter apps demonstrate this, describing how to obtain the required `spring-instrument.jar` file.
+
 To run, use:
 
 [source,bash]
 ----
--javaagent:lib/spring-instrument-5.3.5.jar
+-javaagent:lib/spring-instrument.jar
 ----
 
-as a JVM argument (where the system properties also are located.)
+as a JVM option.
