--- a/core/metamodel/src/main/adoc/modules/metamodel/partials/module-nav.adoc
+++ b/core/metamodel/src/main/adoc/modules/metamodel/partials/module-nav.adoc
@@ -1,4 +1,5 @@
 
 * xref:core:metamodel:about.adoc[MetaModel]
 ** xref:core:metamodel:class-diagram.adoc[]
+** xref:core:metamodel:managed-object.adoc[]
 ** xref:core:metamodel:events.adoc[]
